categorize the error for Protex

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -341,6 +341,7 @@
             "bdstool: command failed:": "Application Error: Protex",
             "protex project name": "Configuration Error: Protex",
             "\\[protex\\] \\[error\\] other: authenticated \\*\\*\\*\\*@intel.com on": "Application Error: Protex",
+            "\\[protex\\] \\[error\\] other: exception in thread": "Application Error: Protex",
             "\\[protex\\] \\[error\\] other: ignore list": "Configuration Error: Protex",
             "\\[protex\\] \\[error\\] syntax:": "Configuration Error: Protex",
 
