--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -28,6 +28,7 @@
             "failed to deploy",
             "failed to merge",
             "failed to search",
+            "failed to complete",
             "failed to search artifact",
             "failed to run",
             "failed: connection",
