--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -235,6 +235,7 @@
             "summary: there were .*. error messages shown, returning a non-zero exit code": "Developer Error: Compilation",
             "summary: there was 1 error message shown, returning a non-zero exit code": "Developer Error: Compilation",
             "error: parseerror in configuration": "Developer Error: Compilation",
+            "the previous cherry-pick is now empty, possibly due to conflict resolution": "Developer Error: Compilation",
 
             "GIT RELATED ERROR": "Git Related Error",
             
