updated splunk config

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -118,7 +118,8 @@
             "error: parseerror",
             "unable to verify the first certificate",
             "docker: error",
-            "error: the following required tools"
+            "error: the following required tools",
+            "configure: error"
         ],
 
         "error_category": {
@@ -239,6 +240,7 @@
             "error: parseerror in configuration": "Developer Error: Compilation",
             "the previous cherry-pick is now empty, possibly due to conflict resolution": "Developer Error: Compilation",
             "error: the following required tools": "Developer Error: Compilation",
+            "configure: error": "Developer Error: Compilation,
 
             "GIT RELATED ERROR": "Git Related Error",
             
