Error category and keyword for rsync error

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -120,7 +120,8 @@
             "docker: error",
             "error: the following required tools",
             "configure: error",
-            "[checkmarx] [error]"
+            "[checkmarx] [error]",
+            "rsync"
         ],
 
         "error_category": {
