updated splunk config file

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -121,7 +121,7 @@
             "error: the following required tools",
             "configure: error",
             "[checkmarx] [error]",
-            "rsync"
+            "rsync:"
         ],
 
         "error_category": {
