Error category for Splunk

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -445,6 +445,7 @@
             "no space left on device": "System Error",
             "preauthentication failed while getting initial credentials": "System Error",
             "disk quota exceeded": "System Error",
+            "process working directory .*. doesn't exist": "System Error",
             "java.io.ioexception: unable to create live filepath": "System Error",
             "jenkins.util.io.compositeioexception: unable to delete": "System Error",
             "jenkins.util.io.compositeioexception: unable to remove directory": "System Error",
