update the config for splunk

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -524,6 +524,7 @@
             "basegpiocheckconflictlib",
             "xlink_secure_err",
             "package '",
+            "conflict.tmpl"
             "conflict.c",
             "caused: java.io.ioexception",
             "conflicts between attempted install",
