--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -122,7 +122,7 @@
             "configure: error",
             "[checkmarx] [error]",
             "insmod: error",
-            "failed on a \"put\",
+            "failed on a \"put\"",
             "rsync:"
         ],
 
