Update the config for misc errors (#19)

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -532,6 +532,7 @@
             "xlink_secure_err",
             "package '",
             "conflict.tmpl",
+            "conflict.h",
             "conflict.c",
             "caused: java.io.ioexception",
             "conflicts between attempted install",
