--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -283,6 +283,7 @@
             "fatal: failed to unpack tree object": "Configuration Error: Git",
             "fatal: tag .*. ": "Configuration Error: Git",
             "git clone .*. failed to complete successfully with the following errors": "Connectivity Error: Git",
+            "fatal: the remote end hung up upon initial contact": "Connectivity Error: Git",
 
             "ARTIFACTORY RELATED ERROR": "Artifactory Related Error",
             
