Update the splunk config (#183)
* Update the splunk config

* Update the splunk config

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -123,6 +123,7 @@
             "configure: error",
             "[checkmarx] [error]",
             "insmod: error",
+            "token",
             "ninja failed",
             "failed on a \"put\"",
             "rsync:"
@@ -475,7 +476,8 @@
             
             "CHECKMARX SCAN ERROR": "Checkmarx Scan Error",
             
-            "\\[checkmarx\\] \\[error\\]: there is no queue scan or scanning is still in progress. you might need to increase timeout to get full result": "Application Error: Checkmarx"
+            "\\[checkmarx\\] \\[error\\]: there is no queue scan or scanning is still in progress. you might need to increase timeout to get full result": "Application Error: Checkmarx",
+            "\\['access_token'\\]": "Application Error: Checkmarx"
         },
 
         "exclusion": [
