--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -564,7 +564,8 @@
             "klocwork table does not exists",
             "no names found, cannot describe anything",
             "embedconflict",
-            "kwbuildproject"
+            "kwbuildproject",
+            "openssl ssl_read: no error information"
         ]
     }
 }
