--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -243,6 +243,7 @@
             "syntaxerror: invalid syntax": "Developer Error: Compilation",
             "summary: there were .*. error messages shown, returning a non-zero exit code": "Developer Error: Compilation",
             "summary: there was 1 error message shown, returning a non-zero exit code": "Developer Error: Compilation",
+            "summary: there was 1 error message, returning a non-zero exit code": "Developer Error: Compilation",
             "error: parseerror in configuration": "Developer Error: Compilation",
             "the previous cherry-pick is now empty, possibly due to conflict resolution": "Developer Error: Compilation",
             "error: the following required tools": "Developer Error: Compilation",
