--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -252,6 +252,7 @@
             "fatal: couldn't find remote ref": "Developer Error: Compilation",
             "could not read from remote repository": "Developer Error: Compilation",
             "error: cannot fetch": "Developer Error: Compilation",
+	    "couldn't find any revision to build": "Developer Error: Configuration",
 
             "GIT RELATED ERROR": "Git Related Error",
             
@@ -337,7 +338,6 @@
 
             "JENKINS RELATED ERROR": "Jenkins Related Error",
             
-            "couldn't find any revision to build": "Configuration Error: Jenkins",
             "groovy.lang.missingpropertyexception": "Configuration Error: Jenkins",
             "errorsexception: startup failed": "Configuration Error: Jenkins",
             "error when executing failure post condition": "Configuration Error: Jenkins",
